// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render correctly with all the given props 1`] = `
<div>
  <label

    class="sc-bdfBwQ bbGbjQ"
    required=""
  >
    Demo Label
  </label>
</div>
`;

exports[`Label should render correctly with default props 1`] = `
<div>
  <label
    class="sc-bdfBwQ cRGQsz"
  >
    Label
  </label>
</div>
`;
